--- a/scss/master.scss
+++ b/scss/master.scss
@@ -355,7 +355,8 @@ body{
     z-index: 150;
     top: 0;
     right: 0;
-    bottom: 0;
+    /*bottom: 0;*/
+    min-height: 100%;
     padding: 10px;
     background-color: $white;
     @include transition(all 0.3s);
